--- a/public/index.html
+++ b/public/index.html
@@ -9,15 +9,12 @@
       <h1>Timothy Ference</h1>
       <div class="about-me-container">
         <p>
-          About Me...<br/>
-          I am a Eagle Scout and a firefighter who wants to start a career in the Computer Engineering
-          field. You're probobly wondering what does being a Eagle Scout and a firefighter have to do with
-          Software Engineering or Systems Engineering? Well I'll tell you, being a Eagle Scout showed
-          me how to lead others I had to be the Seinor Patrol Leader of the troop. This involves controlling
-          the other patrol leaders and organizing tranning sessions. Being a firefighter has taught me 
-          many things, like structure of command and the importance of communication. These traits are
-          embedded in me. To be a good Engineer, you need to communicate and take charge if needed and I have
-          the skills.
+          About Me...
+          I am an Eagle Scout and a firefighter who wants to start a Computer Engineering field career.
+          You're probably wondering what does being an Eagle Scout and a firefighter have to do with Software Engineering or Systems Engineering? 
+          Well, I'll tell you, being an Eagle Scout showed me how to lead others. I was a Senior Patrol Leader of the troop. Being the SPL involves controlling 
+          the other patrol leaders and organizing training sessions. Being a firefighter has taught me many things, like the structure of command and the importance of 
+          communication. These traits are embedded in me. To be a great Engineer, you need to communicate and take charge if needed, and I have the skills.
         </p>
         <div class="image-of-me-container">
           <img src='./Images/IMG_1252.jpg' width='300' height='375'/>
